[package]
name = "newsfresh"
version = "0.1.0"
edition = "2024"
description = "CLI and library for querying, filtering, and analyzing GDELT Global Knowledge Graph (GKG) v2.1 data — the world's largest open news event dataset"
readme = "README.md"
license = "MIT"
keywords = ["gdelt", "gkg", "news", "nlp", "geopolitics"]
categories = ["command-line-utilities", "data-structures", "text-processing"]
repository = "https://github.com/krishjag/newsfresh"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tealeaf-core = "2.0.0-beta.14"
zip = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
tempfile = "3"
tantivy = "0.25"
polars = { version = "0.46", default-features = false, features = ["lazy"], optional = true }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["stats"]
stats = ["dep:polars"]
